src/main/kotlin/com/example/onui/global/config/error/exception/PermissionDeniedException.kt
package com.example.onui.global.config.error.exception

import com.example.onui.global.config.error.data.ErrorCode

object PermissionDeniedException : BusinessException(ErrorCode.PERMISSION_DENIED)
